--- a/css/style.css
+++ b/css/style.css
@@ -161,9 +161,9 @@ li p.urgent {
     -o-transform: translateX(100%);
     -ms-transform: translateX(100%);
     transform: translateX(100%);
-    box-shadow: 0 19px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.22);
-    -moz-box-shadow: 0 19px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.22);
-    -webkit-box-shadow: 0 19px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.22);
+    -webkit-box-shadow: 1px 1px 1px 0px rgba(0,0,0,0.25);
+    -moz-box-shadow: 1px 1px 1px 0px rgba(0,0,0,0.25);
+    box-shadow: 1px 1px 1px 0px rgba(0,0,0,0.25);
 }
   .menu{
     z-index:1000000;  display: flex;
@@ -176,16 +176,35 @@ li p.urgent {
     position: absolute;
     top: 150px;
     left: -100%;
-    background: #112F41;
+    background: #151c2c;
     height: 70%;
     width:100%;}
   .menu ul {padding-inline-start: 20px; list-style-type: none; list-style-image: none; width: 100%;}
-  .menu li {display: block;   margin: 0; padding:10px 15px 10px 15px; margin-right: 20px;}
-  .menu li:hover{display: block;  color:#112F41; border-radius:25px; background:#ffffff;}
-  .menu ul li a { text-decoration:none;  color:#fff;}
-  .menu a{text-decoration:none; color:#fff; font-size: 20px;}
-  .menu a:hover{text-decoration:none; color:#fff;}
-  .menu .menu__logout {margin-top: 150px;}
+.menu li {
+    display: block;   
+    margin: 0; 
+    padding:10px 15px 10px 15px; 
+    margin-right: 20px;
+}
+
+  /*.menu li:hover{display: block;  color:#112F41; border-radius:25px; background:#ffffff;} */
+
+.menu ul li a { 
+    display: block;
+    text-decoration:none; 
+    color:#fff; 
+    font-size: 1.2em;
+    padding: 0.5em;
+    border-radius: 3px;
+}
+.menu ul li a:hover {
+    text-decoration:none; 
+    color: #fff; 
+    background: #4DABF7;}
+
+.menu .menu__logout a:hover {background: #FF922B;}
+
+.menu .menu__logout {margin-top: 4em;}
 
 
 
@@ -345,7 +364,7 @@ form {
     box-shadow: 1px 1px 1px 0px rgba(0,0,0,0.25);
 }
 
-input {
+input, select {
     width: 100%;
     border-radius: 3px;
     border: 1px solid #ccc;
@@ -384,6 +403,20 @@ div.small-container{
 div.small-container-date{
     display: flex;
     justify-content: center;
+}
+
+
+.form__error {
+    display: block;
+    color: #fff;
+    background: #cc3434;
+    margin-bottom: 1em;
+    padding: 0.5em;
+    border-radius: 3px;
+}
+
+a.btn.cancel {
+    background: #FF922B;
 }
 
 
